--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 markdown: GFM
 
-remote_theme: pages-themes/time-machine@v0.2.0
+remote_theme: jekyll/minima
 plugins:
 - jekyll-remote-theme
+minima:
+  skin: auto
