--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
 markdown: GFM
 
-remote_theme: jekyll/minima
+remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme
-minima:
-  skin: auto
