--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 markdown: GFM
 
-remote_theme: pages-themes/hacker@v0.2.0
+remote_theme: pages-themes/midnight@v0.2.0
 plugins:
 - jekyll-remote-theme
